# mplterm

./: .coveragerc  LICENSE.txt  NOTES.rst  README.rst  pyproject.toml  setup.py  setupext.py
lib/mplterm/: __init__.py  _iterm2.py
src/mplterm/: __init__.py  _iterm2.py  _kitty.py  _sixel.py  _util.py
