[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mplterm"
description = "a terminal backend for Matplotlib"
readme = "README.rst"
authors = [{name = "Antony Lee"}]
urls = {"Homepage" = "https://github.com/anntzer/mplterm"}
license = {text = "zlib"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib",
    "License :: OSI Approved :: zlib/libpng License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0+unknown"

[tool.coverage.run]
branch = true
source_pkgs = ["mplterm"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "error::DeprecationWarning:mplterm",
]
